# rs-spline

./: .gitignore  Cargo.toml  README.md  SECURITY.md
.github/: dependabot.yml
rs-spline/: Cargo.toml
rs-spline/examples/: simple.rs
rs-spline/src/: error.rs  lib.rs  macros.rs  spline.rs
rs-spline/src/bspline/: entry.rs  mod.rs  shape.rs  spline.rs
rs-spline/src/macros/: errors.rs
rs-spline/src/traits/: interpolate.rs  mod.rs  sample.rs  spline.rs
rs-spline/src/types/: knot.rs  mod.rs  mode.rs  point.rs
rs-spline/tests/: b-spline.rs
