[workspace.package]
authors = ["Joe McCain III <jo3mccain@icloud.com>",]
categories = [ ]
description = "A generic spline library for Rust optimized for AI workloads"
edition = "2021"
homepage = "https://github.com/FL03/rs-spline/wiki"
keywords = [ ]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/FL03/rs-spline.git"
version = "0.0.0"

[workspace.dependencies]
lazy_static = "1"
num = { default-features = false, version = "0.4" }
paste = "1"
strum = { default-features = false, features = ["derive"], version = "0.26" }

[workspace]
default-members = [
    "rs-spline"
]

exclude = [

]

members = [
    "rs-spline",
]

resolver = "2"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
