[package]
authors.workspace = true
build = "build.rs"
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "rs-spline"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = [
    "std",
]

full = [
    "default",
    "rand",
    "serde",
]

# [FF] Dependencies
alloc = [
    "num/alloc",
    "serde?/alloc",
]

rand = [
    "num/rand",
]

serde = [
    "dep:serde",
]

# ********* [FF] Environments *********
std = [
    "alloc",
    "num/std",
    "serde?/std",
    "strum/std",
]

wasm = []

wasi = []

[lib]
bench = true
crate-type = ["cdylib", "rlib"]
doctest = false
test = true

[[example]]
name = "simple"


[[test]]
name = "b-spline"
required-features = ["std"]

[build-dependencies]

[dependencies]
num.workspace = true
strum.workspace = true

[dependencies.serde]
default-features = false
features = ["derive"]
optional = true
version = "1"

[dev-dependencies]
lazy_static.workspace = true

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]

[target.wasm32-unknown-unknown.dependencies]
getrandom = { features = ["js"], version = "0.2" }

[target.wasm32-wasi]
